# Poisson2DSolver

./: CMakeLists.txt  cmake-vs2019-debug.bat
include/: ConstParam.h  Matrix.h  exprtk.hpp  head.h
src/: US.cpp  df1l1.cpp  df1r1.cpp  dxfi.cpp  dxfj.cpp  dxfm.cpp  dxfn.cpp  dyfi.cpp  dyfj.cpp  dyfm.cpp  dyfn.cpp  f1l1.cpp  f1r1.cpp  fi.cpp  fj.cpp  fm.cpp  fn.cpp  legauss.cpp  line_eq.cpp  lsp.cpp  main.cpp  mynorm.cpp  readTxt.cpp  shp.cpp
